--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "finance-tracker",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "5.0.0",
+    "angular": "1.6.6"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.10.3"
+  }
 }
